--- a/css/global.css
+++ b/css/global.css
@@ -6,6 +6,7 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
+	font-size: 16px;
 }
 
 .container {
@@ -80,18 +81,17 @@ nav {
 
 .content-inner {
 	width: auto;
-	margin: 15px 0px;
+	margin: 1.5em 0 2em;
 }
 
 .contentright {
 	width: 35%;
 	color: #000;
 	float: left;
-	margin: 10px 0;
 }
 
 .content-inner-right {
-	margin-left: 5px;
+	margin-left: 3em;
 }
 /***************************************************************************/
 
@@ -134,7 +134,7 @@ nav {
 }
 
 .footer-text {
-	font-size: 0.9em;
+	font-size: 0.85em;
 	font: "Trebuchet MS", Arial, Helvetica, sans-serif;
 }
 
