--- a/css/global.css
+++ b/css/global.css
@@ -139,31 +139,36 @@ body {
 p {
 	margin: 10px 0;
 	font-size: 1em;
+	line-height: 1.3em;
 }
 
 h1 {
-	font-size: 1.7em;
-	font-weight: normal;
-	color: #FFF;
+	font-size: 2em;
+	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 	margin: 0.67em 0;
+	font-weight: normal;
+}
+
+
+h2, h3, h4, h5, h6 {
+	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }
 
 h2 {
-	font-size: 1.4em;
+	font-size: 1.7em;
 }
 
 h3 {
-	font-size: 1.2em;
+	font-size: 1.3em;
 }
 
 h4 {
-	font-size: 1.1em;
+	font-size: 1.2em;
 	font-weight: bold;
 }
 
 h5 {
-	font-size: 1em;
-	font: normal italic Georgia, "Times New Roman", Times, serif;
+	font-size: 0.9em;
 }
 
 h1 a, a:visited, a:hover {
@@ -182,6 +187,7 @@ a, a:visited, a:hover, a:active {
 /*************************** Header, Navigation, & Footer *****************************/
 header, footer {
 	background: #600;
+	color: #FFF;
 }
 
 .header-left {
@@ -238,10 +244,6 @@ nav {
 	padding: 5px;
 }
 
-header, footer {
-	color: #FFF;
-}
-
 .footer-text {
 	font-size: 0.85em;
 }
@@ -280,12 +282,14 @@ nav a:hover, nav a:active {
 
 aside {
 	margin-left: 3em;
+	font-size: 0.95em;
 }
 
 .content-inner a,
 aside a {
 	color: #600;
-	font: bold;
+	font-weight: bold;
+	font-size: 1.05em;
 	text-decoration: none;
 }
 
@@ -324,7 +328,7 @@ aside a {
 	border-radius: 15px;
 	text-align: center;
 	width: auto;
-	margin: 5px;
+	margin: 1em 0;
 	padding: 2px;
 	background-color: #CFF;
 	border: solid #00F 3px;
