--- a/css/global.css
+++ b/css/global.css
@@ -331,9 +331,9 @@ aside a {
 }
 
 .bottom-shadow {
-	-webkit-box-shadow: 0 2px 10px 4px #333;
-	   -moz-box-shadow: 0 2px 10px 4px #333;
-	        box-shadow: 0 2px 10px 4px #333;
+	-webkit-box-shadow: 0 2px 10px 4px #4F3F39;
+	   -moz-box-shadow: 0 2px 10px 4px #4F3F39;
+	        box-shadow: 0 2px 10px 4px #4F3F39;
 }
 
 /***************************************************************************/
