--- a/css/global.css
+++ b/css/global.css
@@ -348,6 +348,7 @@ aside a {
 	bottom: 0px;
 }
 
+/*
 .inner-shadow {
    -moz-box-shadow:    inset 0 0 20px #000000;
    -webkit-box-shadow: inset 0 0 20px #000000;
@@ -359,6 +360,7 @@ aside a {
 	   -moz-box-shadow: 0 2px 10px 4px #4F3F39;
 	        box-shadow: 0 2px 10px 4px #4F3F39;
 }
+*/
 
 /***************************************************************************/
 
@@ -366,28 +368,28 @@ aside a {
 
 /********************************** Alerts *********************************/
 .alert {
-	border-radius: 15px;
+	border-radius: 2em;
 	text-align: center;
 	width: auto;
 	margin: 1em 0;
-	padding: 2px;
+	padding: 0.5em;
 	background-color: #CFF;
-	border: solid #00F 3px;
+	border: solid #00F 0.25em;
 }
 
 .alert-victory {
 	background-color: #DCFFC0;
-	border: solid #0C3 3px;
+	border: solid #0C3 0.25em;
 }
 
 .alert-warning {
 	background-color: #FFC8BC;
-	border: solid #F00 3px;
+	border: solid #F00 0.25em;
 }
 
 .alert-error {
 	background-color: #FFF7BC;
-	border: solid #F90 3px;
+	border: solid #F90 0.25em;
 }
 
 /************************************************************************/
