--- a/css/global.css
+++ b/css/global.css
@@ -113,8 +113,7 @@ body {
 .container {
 	margin: 0 auto;
 	padding: 0 1em;
-	max-width: 990px;
-	min-width: 480px;
+	max-width: 1000px;
 	overflow: hidden;
 	text-align: left;
 }
@@ -130,7 +129,7 @@ body {
 
 .inline-list {
 	display: inline;
-  	margin: 10px 0;
+  	margin: 0.625em 0;
   	list-style: none;
 }
 
@@ -216,6 +215,7 @@ nav {
 	float: left;
 	margin: 0.9em 0;
 	font-family: "Crimson Text", serif;
+	font-style: bold;
 	font-size: 1.08em;
 	letter-spacing: 0.2em;
 }
