--- a/css/global.css
+++ b/css/global.css
@@ -106,7 +106,6 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: Georgia, serif;
-	font-weight: semi-bold;
 	font-size: 16px;
 }
 
@@ -129,7 +128,7 @@ body {
 
 .inline-list {
 	display: inline;
-  	margin: 0.625em 0;
+  	margin: 0.625em 0; /* 0.625em = 10px based on default body font size of 1em = 16px. */
   	list-style: none;
 }
 
@@ -138,7 +137,7 @@ body {
 }
 
 p {
-	margin: 10px 0;
+  margin: 0.625em 0; /* 0.625em = 10px based on default body font size of 1em = 16px. */
 	font-size: 1em;
 	line-height: 1.3em;
 }
@@ -200,9 +199,9 @@ header {
 	background: linear-gradient(to bottom,  #821414 32%,#660000 73%,#ccff99 74%,#ccff99 89%,#660000 90%,#7a130c 95%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#821414', endColorstr='#7a130c',GradientType=0 ); /* IE6-8 */
 
-	-moz-box-shadow:    inset 0 0 20px #300000;
-   	-webkit-box-shadow: inset 0 0 20px #300000;
-   	box-shadow:         inset 0 0 20px #300000;
+	-moz-box-shadow:    inset 0 0 1.25em #300000; /* 1.25em = 20px based on default body font size of 16px. */
+  -webkit-box-shadow: inset 0 0 1.25em #300000; /* 1.25em = 20px based on default body font size of 16px. */
+  box-shadow:         inset 0 0 1.25em #300000; /* 1.25em = 20px based on default body font size of 16px. */
 }
 
 .header-left {
@@ -215,8 +214,7 @@ nav {
 	float: left;
 	margin: 0.9em 0;
 	font-family: "Crimson Text", serif;
-	font-style: bold;
-	font-size: 1.08em;
+	font-size: 1em;
 	letter-spacing: 0.2em;
 }
 
@@ -255,19 +253,19 @@ footer {
 	background: -ms-linear-gradient(top,  #7a130c 34%,#660000 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  #7a130c 34%,#660000 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7a130c', endColorstr='#660000',GradientType=0 ); /* IE6-8 */
-	
-   	-moz-box-shadow:    inset 0 0 8px #3A0000;
-   	-webkit-box-shadow: inset 0 0 8px #3A0000;
-   	box-shadow:         inset 0 0 8px #3A0000;
 
-	color: #FFF;		
+  -moz-box-shadow:    inset 0 0 0.5em #3A0000; /* 0.5em = 8px based on body default font size of 16px */
+  -webkit-box-shadow: inset 0 0 0.5em #3A0000; /* 0.5em = 8px based on body default font size of 16px */
+  box-shadow:         inset 0 0 0.5em #3A0000; /* 0.5em = 8px based on body default font size of 16px */
+
+	color: #FFF;
 	font-family: "Crimson Text", serif;
 	font-size: 0.85em;
 	letter-spacing: 0.15em;
 }
 
 .footer-left {
-	width: 70%;
+	width: 60%;
 	float: left;
 }
 
@@ -278,7 +276,7 @@ footer {
 }
 
 .socialmedia {
-	width: 30%;
+	width: 40%;
 	float: right;
 	text-align: right;
 }
@@ -300,9 +298,9 @@ nav a:hover, nav a:active {
 /****************************** Main Content ***********************************/
 
 .maincontent {
-   -moz-box-shadow:    inset 0 0 18px #000000;
-   -webkit-box-shadow: inset 0 0 18px #000000;
-   box-shadow:         inset 0 0 18px #000000;
+   -moz-box-shadow:    inset 0 0 1em #000000; /* 1em = 16px based on body font size. */
+   -webkit-box-shadow: inset 0 0 1em #000000; /* 1em = 16px based on body font size. */
+   box-shadow:         inset 0 0 1em #000000; /* 1em = 16px based on body font size. */
 }
 
 .contentleft {
@@ -339,6 +337,7 @@ aside a {
 
 
 /********************************** Images *********************************/
+/*
 .image_right {
 	width: auto;
 	float: right;
@@ -347,6 +346,7 @@ aside a {
 	right: 0px;
 	bottom: 0px;
 }
+*/
 
 /*
 .inner-shadow {
@@ -391,5 +391,12 @@ aside a {
 	background-color: #FFF7BC;
 	border: solid #F90 0.25em;
 }
+
+/************************************************************************/
+
+
+
+/**************************** Media Queries *****************************/
+@media (max-width: 12)
 
 /************************************************************************/
