--- a/css/global.css
+++ b/css/global.css
@@ -174,7 +174,7 @@ h5 {
 	font-size: 1em;
 }
 
-h1 a, a:visited, a:hover {
+h1 a, h1 a:visited, h1 a:hover {
 	color: #FFF;
 	text-decoration: none;
 }
@@ -215,7 +215,6 @@ nav {
 	float: left;
 	margin: 0.9em 0;
 	font-family: "Crimson Text", serif;
-	font-style: bold;
 	font-size: 1em;
 	letter-spacing: 0.2em;
 }
@@ -231,9 +230,10 @@ nav {
  	display: inline-block;
 }
 
-.nav-list a:link {
+.nav-list a {
 	color: #FFF;
 	display: inline-block;
+	font-weight: bold;
 	padding: 0.65em;
  	border-radius: 2em;
 }
@@ -262,7 +262,7 @@ footer {
 
 	color: #FFF;
 	font-family: "Crimson Text", serif;
-	font-style: bold;
+	font-weight: bold;
 	font-size: 0.85em;
 	letter-spacing: 0.15em;
 }
@@ -371,28 +371,30 @@ aside a {
 
 /********************************** Alerts *********************************/
 .alert {
-	border-radius: 2em;
 	text-align: center;
 	width: auto;
 	margin: 1em 0;
 	padding: 0.5em;
 	background-color: #CFF;
-	border: solid #00F 0.25em;
+	border-style: solid;
+	border-width: 0.25em;
+	border-radius: 2em;
+	border-color: #00F
 }
 
 .alert-victory {
 	background-color: #DCFFC0;
-	border: solid #0C3 0.25em;
+	border-color: #0C3;
 }
 
 .alert-warning {
 	background-color: #FFC8BC;
-	border: solid #F00 0.25em;
+	border-color: #F00;
 }
 
 .alert-error {
 	background-color: #FFF7BC;
-	border: solid #F90 0.25em;
+	border-color: #F90;
 }
 
 /************************************************************************/
