--- a/haml-sass-exercises/global.css
+++ b/haml-sass-exercises/global.css
@@ -1,21 +1,172 @@
-/*
-Errno::ENOENT: No such file or directory - global.sass
+/***** General Layout ***** */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Verdana, Geneva, sans-serif;
+  font-size: 16px; }
 
-Backtrace:
-/Users/flevy2/.rvm/gems/ruby-2.0.0-p0/gems/sass-3.2.8/lib/sass/plugin/compiler.rb:339:in `read'
-/Users/flevy2/.rvm/gems/ruby-2.0.0-p0/gems/sass-3.2.8/lib/sass/plugin/compiler.rb:339:in `update_stylesheet'
-/Users/flevy2/.rvm/gems/ruby-2.0.0-p0/gems/sass-3.2.8/lib/sass/plugin/compiler.rb:203:in `block in update_stylesheets'
-/Users/flevy2/.rvm/gems/ruby-2.0.0-p0/gems/sass-3.2.8/lib/sass/plugin/compiler.rb:201:in `each'
-/Users/flevy2/.rvm/gems/ruby-2.0.0-p0/gems/sass-3.2.8/lib/sass/plugin/compiler.rb:201:in `update_stylesheets'
-/Users/flevy2/.rvm/gems/ruby-2.0.0-p0/gems/sass-3.2.8/lib/sass/plugin/compiler.rb:299:in `block in watch'
-/Users/flevy2/.rvm/gems/ruby-2.0.0-p0/gems/sass-3.2.8/vendor/listen/lib/listen/multi_listener.rb:108:in `call'
-/Users/flevy2/.rvm/gems/ruby-2.0.0-p0/gems/sass-3.2.8/vendor/listen/lib/listen/multi_listener.rb:108:in `on_change'
-/Users/flevy2/.rvm/gems/ruby-2.0.0-p0/gems/sass-3.2.8/vendor/listen/lib/listen/multi_listener.rb:117:in `block in initialize_adapter'
-/Users/flevy2/.rvm/gems/ruby-2.0.0-p0/gems/sass-3.2.8/vendor/listen/lib/listen/adapters/polling.rb:56:in `call'
-/Users/flevy2/.rvm/gems/ruby-2.0.0-p0/gems/sass-3.2.8/vendor/listen/lib/listen/adapters/polling.rb:56:in `poll'
-/Users/flevy2/.rvm/gems/ruby-2.0.0-p0/gems/sass-3.2.8/vendor/listen/lib/listen/adapters/polling.rb:32:in `block in start'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Errno::ENOENT: No such file or directory - global.sass"; }
+.container {
+  margin: 0 auto;
+  padding: 0 1%;
+  width: 98%;
+  max-width: 1000px;
+  overflow: hidden;
+  text-align: left; }
+
+.container-header {
+  padding-bottom: 1.35em; }
+
+.clearfloat {
+  width: 100%;
+  clear: both; }
+
+.inline-list {
+  display: inline;
+  margin: 0.625em;
+  /* 0.625em = 10px based on default body font size of 1em = 16px */
+  list-style: none; }
+
+.text-center {
+  text-align: center; }
+
+p {
+  margin: 0.625em 0;
+  /* 0.625em = 10px based on default body font size of 1em = 16px */
+  font-size: 1em;
+  line-height: 1.3em; }
+
+h1 {
+  margin: 0.5em 0 0.67em;
+  font-size: 2.5em;
+  font-weight: normal;
+  font-family: "IM Fell English", serif;
+  font-style: italic;
+  letter-spacing: 0.1em; }
+
+h2, h3, h4, h5, h6 {
+  font-family: "Crimson Text", serif; }
+
+h2 {
+  font-size: 1.8em; }
+
+h3 {
+  font-size: 1.4em;
+  font-weight: bold; }
+
+h4 {
+  font-size: 1.3em; }
+
+h5 {
+  font-size: 1em; }
+
+h1 a, h1 a:visited, h1 a:hover {
+  color: white;
+  text-decoration: none; }
+
+/*** Header, Navigation, & Footer *** */
+.header-left {
+  width: 50%;
+  float: left; }
+
+nav {
+  width: 50%;
+  float: left;
+  margin: 0.9em 0;
+  font-family: "Crimson Text", serif;
+  font-size: 1em;
+  letter-spacing: 0.2em; }
+  nav a:hover, nav a:active {
+    background: #ccff99;
+    color: #7a130c; }
+
+.nav-list {
+  margin: 0;
+  float: right; }
+  .nav-list li {
+    list-style: none;
+    margin: 0;
+    display: inline-block; }
+  .nav-list a {
+    color: white;
+    display: inline-block;
+    font-weight: bold;
+    padding: 0.65em;
+    border-radius: 2em; }
+  .nav-list .active, .nav-list a:hover {
+    background: #ccff99;
+    color: #7a130c; }
+
+footer {
+  color: white;
+  font-family: "Crimson Text", serif;
+  font-weight: bold;
+  font-size: 0.8em;
+  font-letter-spacing: 0.15em; }
+  footer a, footer a:visited, footer a:hover, footer a:active {
+    color: white;
+    font-weight: bold; }
+
+.footer-left {
+  width: 60%;
+  float: left; }
+
+.small-column {
+  width: 25%;
+  float: left;
+  padding: 1em; }
+
+.socialmedia {
+  width: 40%;
+  float: right;
+  text-align: right; }
+
+/****** Main Content ****** */
+.maincontent {
+  box-shadow: inset 0 0 1em black;
+  /* 1em = 16px based on body font size */ }
+
+.contentleft {
+  width: 70%;
+  float: left; }
+
+contentright {
+  width: 30%;
+  color: black;
+  float: left; }
+
+.content-inner, aside {
+  width: auto;
+  margin: 1.5em 0 2em; }
+  .content-inner a, aside a {
+    color: #7a130c;
+    font-weight: bold;
+    font-size: 1.05em;
+    text-decoration: none; }
+
+aside {
+  margin-left: 3em;
+  font-size: 0.95em; }
+
+/***** Alerts ***** */
+.alert {
+  text-align: center;
+  width: auto;
+  margin: 1em 0;
+  padding: 0.5em;
+  border-radius: 2em;
+  border-style: solid;
+  border-width: 0.25em;
+  background-color: #ccffff;
+  border-color: cyan; }
+
+.alert-victory {
+  background-color: #dcffc0;
+  border-color: #00cc33; }
+
+.alert-warning {
+  background-color: #ffc8bc;
+  border-color: red; }
+
+.alert-error {
+  background-color: #fff7bc;
+  border-color: #ff9900; }
