Further Sass/CSS additions to global stylesheet.

--- a/haml-sass-exercises/global.sass
+++ b/haml-sass-exercises/global.sass
@@ -11,8 +11,8 @@ $brown: #7A130C
 	color: $brown
 
 @mixin alert
-	background-color: ($value)
-	border-color: ($value)
+	background-color: $background-color
+	border-color: $border-color
 
 /****** General Layout ******/
 
