--- a/haml-sass-exercises/global.sass
+++ b/haml-sass-exercises/global.sass
@@ -14,183 +14,13 @@ $brown: #7A130C
 	background: $green
 	color: $brown
 
-@mixin alert($background-color, $border-color)
-	background-color: $background-color
-	border-color: $border-color
+// Imported 3rd-Party CSS
 
-/****** General Layout ******/
+@import "reset"
 
-body
-	margin: 0
-	padding: 0
-	font: 
-		family: $serif
-		size: 16px
-
-.container
-	margin: 0 auto
-	padding: 0 1%
-	width: 98%
-	max-width: 1000px
-	overflow: hidden
-	text-align: left
-
-.container-header
-	padding-bottom: 1.35em
-
-.clearfloat
-	width: 100%
-	clear: both
-
-/* .inline-list margin 0.625em = 10px based on default body font size of 1em = 16px */
-.inline-list
-	display: inline
-	margin: 0.625em
-	list-style: none	
-
-.text-center
-	text-align: center
-
-/* p margin 0.625em = 10px based on default body font size of 1em = 16px */
-p
-	margin: 0.625em 0
-	font-size: $font-base
-	line-height: $font-base + ($font-base * 0.3)
-
-h1
-	margin: 0.5em 0 0.67em
-	font:
-		size: 2.5em
-		weight: normal
-		family: "IM Fell English", serif
-		style: italic
-	letter-spacing: 0.1em
-
-h2, h3, h4, h5, h6
-	font-family: $serif-body
-
-h2
-	font-size: 1.8em
-
-h3
-	font:
-		size: 1.4em
-		weight: bold
-
-h4
-	font-size: 1.3em
-
-h5
-	font-size: $font-base
-
-h1 a, h1 a:visited, h1 a:hover
-	color: $white
-	text-decoration: none
-
-
-/**** Header, Navigation, & Footer ****/
-
-.header-left
-	@include width-float(50%, left)
-
-nav
-	@include width-float(50%, left)
-	margin: 0.9em 0
-	font:
-		family: $serif-body
-		size: $font-base
-	letter-spacing: 0.2em
-
-	a:hover, a:active
-		@include nav-now
-
-.nav-list
-	margin: 0
-	float: right
-
-	li
-		list-style: none
-		margin: 0
-		display: inline-block
-	
-	a
-		color: $white
-		display: inline-block
-		font-weight: bold
-		padding: 0.65em
-		border-radius: 2em
-
-	.active, a:hover
-		@include nav-now
-
-footer
-	color: $white
-	font:
-		family: $serif-body
-		weight: bold
-		size: 0.8em
-		letter-spacing: 0.15em
-
-	a, a:visited, a:hover, a:active
-		color: $white
-		font-weight: bold
-		
-.footer-left
-	@include width-float(60%, left)
-
-.small-column
-	@include width-float(25%, left)
-	padding: 1em
-
-.socialmedia
-	@include width-float(40%, right)
-
-/******* Main Content *******/
-
-/* 1em = 16px based on body font size */
-.maincontent
-	box-shadow: inset 0 0 1em $black
-
-.contentleft
-	@include width-float(70%, left)
-
-contentright
-	@include width-float(30%, left)
-	color: $black
-
-.content-inner, aside
-	width: auto
-	margin: 1.5em 0 2em
-
-	a
-		color: $brown
-		font:
-			weight: bold
-			size: 1.05em
-		text-decoration: none
-
-aside
-	margin-left: 3em
-	font-size: 0.95em
-
-
-/****** Alerts ******/
-.alert
-	text-align: center
-	width: auto
-	margin: 1em 0
-	padding: 0.5em
-	border: 
-		radius: 2em
-		style: solid
-		width: 0.25em
-	@include alert(#CFF, #0FF)
-
-.alert-victory
-	@include alert(#DCFFC0, #0C3)
-
-.alert-warning
-	@include alert(#FFC8BC, #F00)
-
-.alert-error
-	@include alert(#FFF7BC, #F90)
+// Imported Stylesheets made for this project
+@import "genlayouttypography"
+@import "headernavfooter"
+@import "maincontent"
+@import "alert"
+@import "media"
