--- a/haml-sass-exercises/index.haml
+++ b/haml-sass-exercises/index.haml
@@ -4,7 +4,7 @@
 %head
 	%link
 	%meta
-	%title Home | Fran's CSS Adventures
+	%title Home | Fran&apos;s CSS Adventures
 	%link
 
 %body
@@ -24,7 +24,6 @@
 						%a(href="experiments.html")Experiments
 					%li
 						%a(href="blog.html")Blog
-	/ End Header and Navigation
 
 	/ Main Content
 	.maincontent
@@ -50,7 +49,6 @@
 				%aside
 					%p
 						And here.
-	/ End Main Content
 
 	/ Footer
 	%footer
@@ -61,5 +59,3 @@
 			.socialmedia
 				%p
 					Insert social media here
-	/ End Footer
-
