Found way to add green stripe to header using an 'inner-border' class with 'inner-border: before'. Also added inner-shadow mixins, but for some reason, the  argument of 0 isn't recognized.

--- a/haml-sass-exercises/global.sass
+++ b/haml-sass-exercises/global.sass
@@ -5,6 +5,8 @@ $white: #FFF
 $black: #000000
 $green: #CF9
 $brown: #7A130C
+$header-shadow: #300000
+$footer-shadow: #3A0000
 
 @mixin width-float($width, $float)
 	width: $width
@@ -13,6 +15,11 @@ $brown: #7A130C
 @mixin nav-now
 	background: $green
 	color: $brown
+
+@mixin inner-shadow($horiz, $vert, $blur, $spread, $color)
+	-webkit-box-shadow: $horiz $vert $blur $spread $color
+	-moz-box-shadow: $horiz $vert $blur $spread $color
+	box-shadow: $horiz $vert $blur $spread $color
 
 // Imported 3rd-Party CSS
 
