--- a/haml-sass-exercises/_headernavfooter.sass
+++ b/haml-sass-exercises/_headernavfooter.sass
@@ -1,5 +1,22 @@
 /**** Header, Navigation, & Footer ****/
 
+header
+	background: $brown
+	@include inner-shadow(inset 0 0 1.25em $header-shadow)
+
+.inner-border
+	color: $green
+	position: relative
+
+.inner-border:before
+	border-bottom; 1em solid $green
+	content: ""
+	position: absolute
+	top: 0
+	bottom: 1em
+	left: 0
+	right: 0
+
 .header-left
 	@include width-float(50%, left)
 
@@ -44,6 +61,8 @@ footer
 	a, a:visited, a:hover, a:active
 		color: $white
 		font-weight: bold
+
+	@include inner-shadow(inset 0 0 0.5em $footer-shadow)
 		
 .footer-left
 	@include width-float(60%, left)
