--- a/haml-sass-exercises/_headernavfooter.sass
+++ b/haml-sass-exercises/_headernavfooter.sass
@@ -2,14 +2,14 @@
 
 header
 	background: $brown
-	@include inner-shadow(inset 0 0 1.25em $header-shadow)
+	@include inner-shadow(inset, 0, 0, 1.25em, $header-shadow)
 
 .inner-border
 	color: $green
 	position: relative
 
 .inner-border:before
-	border-bottom; 1em solid $green
+	border-bottom: 1em solid $green
 	content: ""
 	position: absolute
 	top: 0
@@ -62,7 +62,7 @@ footer
 		color: $white
 		font-weight: bold
 
-	@include inner-shadow(inset 0 0 0.5em $footer-shadow)
+	@include inner-shadow(inset, 0, 0, 0.5em, $footer-shadow)
 		
 .footer-left
 	@include width-float(60%, left)
