--- a/haml-sass-exercises/_maincontent.sass
+++ b/haml-sass-exercises/_maincontent.sass
@@ -2,7 +2,7 @@
 
 /* 1em = 16px based on body font size */
 .maincontent
-	@include inner-shadow(inset 0 0 1em $black)
+	@include inner-shadow(inset, 0, 0, 1em, $black)
 
 .contentleft
 	@include width-float(70%, left)
