--- a/haml-sass-exercises/haml/experiments.haml
+++ b/haml-sass-exercises/haml/experiments.haml
@@ -61,8 +61,8 @@
 					%section.content-inner
 						%h3 Positioning
 						%p
-							This paragraph contains a few tooltip demonstrations. To see the tooltips, hover over the <a href="#">underlined text.
-							%span.tooltip
+							This paragraph contains a few tooltip demonstrations. To see the tooltips, hover over the <a class="tooltip" href="#">underlined text.
+							%span
 								I'm a tooltip!
 							</a>
 							Tooltips are useful for placing <a href="#">comments
