Re-structured file folders to eliminate the haml-sass-exercises folder. The original old global.css file has been replaced with the global.css file written from Sass.

--- a/haml/experiments.haml
+++ b/haml/experiments.haml
@@ -70,7 +70,7 @@
 								I have no comment at this time.
 							</a> within a text, for providing <a href="#">definitions
 							%span.tooltip
-								Defition: The formal statement of the meaning or significance of a word, phrase, idiom, etc., as found in dictionaries.
+								Definition: The formal statement of the meaning or significance of a word, phrase, idiom, etc., as found in dictionaries.
 							</a> of particular words, or for demonstrating how <a href="#">impressive
 							%span.tooltip
 								Aren't you impressed?
