--- a/haml/experiments.haml
+++ b/haml/experiments.haml
@@ -65,14 +65,14 @@
 							%span
 								I'm a tooltip!
 							</a>
-							Tooltips are useful for placing <a href="#">comments
-							%span.tooltip
+							Tooltips are useful for placing <a class="tooltip" href="#">comments
+							%span
 								I have no comment at this time.
-							</a> within a text, for providing <a href="#">definitions
-							%span.tooltip
-								Definition: The formal statement of the meaning or significance of a word, phrase, idiom, etc., as found in dictionaries.
-							</a> of particular words, or for demonstrating how <a href="#">impressive
-							%span.tooltip
+							</a> within a text, for providing <a class="tooltip" href="#">definitions
+							%span
+								But how do you give a definition of "definition"?
+							</a> of particular words, or for demonstrating how <a class="tooltip" href="#">impressive
+							%span
 								Aren't you impressed?
 							</a> tooltips look in action. That's right; you don't need a 
 							%em
