--- a/sass/_tooltip.sass
+++ b/sass/_tooltip.sass
@@ -1,17 +1,73 @@
 /**** Tooltips ****/
 
-.tooltip span
+// Anthony's method
+
+
+/* anchor tag */
+.tooltip 
+	position: relative
+
+/* This is the span within anchor tag aka tooltip */
+/* "top: 100%"" is the height of anchor */
+/* "margin-top" offsets the size of the arrow */
+.tooltip span 
 	display: none
 	position: absolute
-	background: $black
+	bottom: 175%
+	margin-top: -25px 
+	left: 0
+	background: $brown
 	color: $white
-	padding: 5px
-	top: -20px
-	z-index: 1
+	padding: 0.4em 0.5em 0.5em 0.5em
+	border:
+		style: solid
+		width: 0.1em
+		color: $brown-shadow
+		radius: 0.5em
 
-.tooltip
-	position: relative
-	text-decoration: none
-
-.tooltip:hover span
+/* show tooltip */
+.tooltip:hover span 
 	display: block
+
+/* Arrow http://css-tricks.com/snippets/css/css-triangle/ */
+/* "border-top" determine's arrow color */
+.tooltip span:after
+	content: ''
+	position: absolute
+	bottom: -0.94em
+	right: 1.5em
+	width: 0
+	height: 0
+	border-left: 1em solid transparent
+	border-right: 1em solid transparent
+	border-top: 1em solid $brown
+
+/* My own arrow "shadow" effect made by slightly offsetting a darker arrow shape beneath the original arrow */
+.tooltip span:before
+	content: ''
+	position: absolute
+	bottom: -1.1em
+	right: 1.4em
+	width: 0
+	height: 0
+	border-left: 1.1em solid transparent
+	border-right: 1.1em solid transparent
+	border-top: 1.1em solid $brown-shadow
+
+
+// (Original) Alternative: Anthony's tweaks to Scott's method
+	.tooltip
+		position: relative
+		text-decoration: none
+
+	.tooltip span
+		display: none
+		position: absolute
+		background: $black
+		color: $white
+		padding: 5px
+		top: -20px
+		z-index: 1
+
+	.tooltip:hover span
+		display: block
