--- a/haml/experiments.haml
+++ b/haml/experiments.haml
@@ -61,11 +61,10 @@
 					%section.content-inner
 						%h3 Positioning
 						%p
-							This paragraph contains a few tooltip demonstrations. To see the tooltips, hover over the <a class="tooltip" href="#">underlined text.
+							This paragraph contains a few tooltip demonstrations. To see the tooltips, hover over the <a class="tooltip" href="#">underlined text
 							%span
-								I'm a tooltip!
-							</a>
-							Tooltips are useful for placing <a class="tooltip" href="#">comments
+								Look, it's a tooltip!
+							</a>. Tooltips are useful for placing <a class="tooltip" href="#">comments
 							%span
 								I have no comment at this time.
 							</a> within a text, for providing <a class="tooltip" href="#">definitions
@@ -104,5 +103,5 @@
 					%p
 						Insert social media here
 
-		%script(src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js")
+		%script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js")
 		%script(src="js/script.js")
