--- a/sass/_genlayouttypography.sass
+++ b/sass/_genlayouttypography.sass
@@ -40,6 +40,7 @@ p
 	margin: 0.625em 0
 	font-size: $font-base
 	line-height: $font-base + ($font-base * 0.3)
+	letter-spacing: 0.05em
 
 h1
 	margin: 0.4em 0 0.4em
@@ -55,17 +56,18 @@ h1
 
 h2, h3, h4, h5, h6
 	font-family: $serif-body
+	letter-spacing: 0.05em
 
 h2
-	font-size: 1.8em
+	font-size: 2.1em
 
 h3
 	font:
-		size: 1.4em
+		size: 1.6em
 		weight: bold
 
 h4
-	font-size: 1.3em
+	font-size: 1.4em
 
 h5
 	font-size: $font-base
