--- a/sass/_headernavfooter.sass
+++ b/sass/_headernavfooter.sass
@@ -1,8 +1,8 @@
 /**** Header, Navigation, & Footer ****/
 
 header
-	background: $brown
-	@include inner-shadow(inset, 0, 0, 0.5em, $brown-shadow)
+	background: $light-brown
+	@include inner-shadow(inset, 0, 0, 1em, $brown-shadow)
 
 //
 	.stripe
