--- a/sass/global.sass
+++ b/sass/global.sass
@@ -1,12 +1,14 @@
 $font-base: 1em
-$sans-serif: Verdana, Geneva, sans-serif
+$sans-serif: Tahoma, Geneva, sans-serif
 $serif-body: "Crimson Text", serif
 $serif-title: "IM Fell English", serif
 $white: #FFF
 $black: #000000
 $green: #CF9
+$light-brown: #97190F
 $brown: #7A130C
 $brown-shadow: #3A0000
+$dark-grey: #404040
 
 @mixin width-float($width, $float)
 	width: $width
