--- a/haml/index.haml
+++ b/haml/index.haml
@@ -60,5 +60,5 @@
 				.socialmedia
 					%p
 						Insert social media here
-		%script(src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js")
+		%script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js")
 		%script(src="js/script.js")
